bpo-33253: Fix xxsubtype.bench() to accept correct str signature. (GH-6439)